<resources>

    <string name="app_name">作業七: 黃禎安</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_subtitle">擲骰子！</string>
    <string name="prompt_title">和電腦擲骰</string>
    <string name="default_result_msg">結果訊息</string>
    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>
    <string name="result">判定輸贏：</string>
    <string name="draw_die">擲骰子</string>

    <string name="total_set">全部局數：</string>
    <string name="player_win_set">玩家贏：</string>
    <string name="comupter_win_set">電腦贏：</string>
    <string name="draw">平手：</string>

    <string name="btn_show_result1">顯示結果</string>
    <string name="back_to_previous_view">返回</string>
    <string name="title_activity_game_statistics">GameStatistics</string>

</resources>
